# rime

./: Cargo.toml  README.md
src/: arg.rs  main.rs  ui.rs
